samples/_failures_safe/1761335492_d4eab5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86a23bab.c: In function ‘main’:
./samples/SAFE/__tmp_86a23bab.c:164:5: error: expected expression at end of input
  164 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_86a23bab.c:164:5: error: expected declaration or statement at end of input
